# MallocFinder

./: CMakeLists.txt  README.md
include/malloc_finder/: malloc_finder.h  malloc_finder_definitions.hpp
src/: malloc_finder.cpp
tests/: CMakeLists.txt  TestMallocFinder.cpp
